<resources>
    <string name="judul_halaman1">Mad Asli</string>
	<string name="judul_halaman2">Mad Far’i</string>
	<string name="judul_halaman3">Mad Far’i</string>
    <string name="idzhar">\n
Idzhar/Idzhar Halqi. Menurut bahasa, Idzhar artinya jelas dan terang.\n
Menurut istilah yaitu mengeluarkan huruf dari makhrajnya tanpa memakai dengung pada huruf yang diidzharkan.\n
Hukum Idzhar: Apabila Nun Sukun atau Tanwin bertemu salah satu dari 6 Huruf Halqi( ha ( ھ), hamzah ( أ), ghoin (غ), ‘ain (ع), kho (خ), dan kha (ح)) maka dibaca JELAS.</string>
    <string name="id_bigunnah">\n
Idgham Bighunnah/ma‘al gunnah berlaku jika nun mati atau tanwin bertemu dengan huruf mim (م), nun (ن), wau (و), atau ya (ي), maka ia harus dibaca LEBUR DENGAN DENGUNG.</string>
    <string name="id_bilagunnah">\n
Idgham Bilaghunnah berlaku jika nun mati atau tanwin bertemu dengan huruf ra (ر) atau lam (ل), maka ia harus dibaca LEBUR TANPA DENGUNG.
</string>
    <string name="idgham">\n
Idgham terbagi menjadi dua, yakni :</string>
    <string name="satukata">\n
Jika nun mati atau tanwin bertemu dengan keenam huruf idgham tersebut tetapi ditemukan dalam satu kata, seperti بُنْيَانٌ, اَدُّنْيَا, قِنْوَانٌ, dan صِنْوَانٌ, maka nun mati atau tanwin tersebut dibaca Izdhar Mutlaq (JELAS).\n
dalam Al-Qur’an hanya ada 4, yaitu :</string>
    <string name="satukata_">\n
Jika nun sukun dalam huruf bertemu waw maka bacaannya adalah izdhar mutlaq.\n
dalam Al-Qur’an hanya ada 2, yaitu :</string>
    <string name="ikhfa">\n
Ikhfa/Ikhfa haqiqi berlaku jika nun mati atau tanwin bertemu dengan huruf-huruf seperti ta(ت), tha (ث), jim (ج), dal (د), dzal (ذ), zai (ز), sin (س), syin (ش), sod (ص), dhod (ض), tho (ط), zho (ظ), fa (ف), qof (ق), dan kaf (ك), maka cara membacanya harus SAMAR-SAMAR (antara Izhar dan Idgham)</string>
    <string name="iqlab">\n
Hukum Iqlab terjadi apabila nun mati atau tanwin bertemu dengan huruf ba (ب). Dan cara membacanya yakni nun mati atau tanwin berubah menjadi bunyi mim (م) dan dibaca DENGUNG.
</string>
    <string name="ikhfa_syafawi">\n
Ikhfa Syafawi (ﺇﺧﻔﺎﺀ ﺷﻔﻮﻱ) berlaku apabila mim mati (مْ) bertemu dengan ba (ب), maka cara membacanya harus dibunyikan samar-samar di bibir dan dibaca didengungkan.</string>
    <string name="idgham_mislain">\n
Idgham Mimi ( إدغام ميمى)/Idgham Mislain/Mutanasilain berlaku apabila mim mati (مْ) bertemu dengan mim (م), maka cara membacanya adalah seperti menyuarakan mim rangkap atau ditasyidkan dan wajib dibaca dengung.</string>
    <string name="idzhar_syafawi">\n
Izhar Syafawi (ﺇﻇﻬﺎﺭ ﺷﻔﻮﻱ) berlaku apabila mim mati (مْ) bertemu dengan salah satu huruf hijaiyyah selain huruf mim (مْ) dan ba (ب), maka cara membacanya dengan jelas di bibir dan mulut tertutup.</string>
    <string name="hukum_idgham">Idgham (ﺇﺩﻏﺎﻡ) adalah berpadu atau bercampur antara dua huruf atau memasukkan satu huruf ke dalam huruf yang lain. Maka dari itu, bacaan idgham harus dilafazkan dengan cara meleburkan suatu huruf kepada huruf setelahnya.\n
Hukum Idgham dibagi menjadi tiga.</string>
    <string name="mutamatsilain">\n
Idgham mutamatsilain (ﺇﺩﻏﺎﻡ ﻣﺘﻤﺎﺛﻠﻴﻦ – yang serupa) ialah pertemuan antara dua huruf(satu huruf mati/sukun dan satu lagi berharakat) yang sama sifat dan makhrajnya (tempat keluarnya). Seperti huruf dal bertemu dal, huruf ba‘ bertemu ba‘ dan sebagainya. Hukumnya adalah wajib diidghamkan.\n
Pengecualian :\n
1. mim (م) sukun dan mim (م) berharakat : - Idgham Mislan (dengung).\n
2. nun ( ن) sukun dan nun ( ن) berharakat: - Idgaham bi ghunnah (dengung).\n
3. huruf-huruf mad (ا و ي) - di baca panjang sebagaimana mestinya (hukum mad).</string>
    <string name="mutajanisain">\n
Idgham mutajanisain (ﺇﺩﻏﺎﻡ ﻣﺘﺠﺎﻧﺴﻴﻦ - yang sejenis) ialah pertemuan antara dua huruf yang sama makhrajnya tetapi tidak sama sifatnya seperti ta‘ dan tha, lam dan ra‘ serta dzal dan zha.\n
Cara membaca idgham mutajanisain ialah dengan mentasydidkan huruf yang ke dua, yang berarti huruf pertama diabaikan.\n
\n
هَمَّتْ طَائِفَةٌ = هَمَّ طَّائِفَةٌ – قُلْ رَبِّ = قُـرَّبِّ – اِذْ ظَلَمُوْا = اِظَّلَمُوْا

</string>
    <string name="mutaqaribain">\n
Idgham mutaqaribain (ﺇﺩﻏﺎﻡ ﻣﺘﻘﺎﺭﺑﻴﻦ) ialah pertemuan dua huruf yang sifat dan makhrajnya berdekatan.\n
Cara membaca idgham mutaqaribain adalah dengan mengabaikan huruf pertama dan membaca huruf kedua secara bertasdid.\n
dalam Al-Qur’an hanya ada 2, yaitu :</string>
    <string name="action_exit">Exit</string>
    <string name="tab_one_title">Idzhar</string>
    <string name="tab_two_title">Idgham</string>
    <string name="tab_three_title">Ikhfa</string>
    <string name="tab_four_title">Iqlab</string>
    <string name="tab_enam_title">Ikhfa Syafawi</string>
    <string name="tab_lima_title">Idgham Mislain</string>
    <string name="tab_tujuh_title">Idzhar Syafawi</string>
    <string name="tab_x_title">Mutamatsilain</string>
    <string name="tab_y_title">Mutajanisain</string>
    <string name="tab_z_title">Mutaqaribain</string>
    <string name="tab_kubro_title">Kubro/Besar</string>
    <string name="tab_xa_title">Tafkhim/Tebal</string>
    <string name="tab_ya_title">Tarqiq/Tipis</string>
    <string name="tab_za_title">Jawazul Wajhain</string>
    <string name="tab_sugro_title">Sugro/Kecil</string>
    <string name="tab_syam_title">Idgom Syamsiyah</string>
    <string name="tab_qom_title">Idzhar Qomariyah</string>
    <string name="hukum_mad">Apabila ada alif ( ا ) terletak sesudah fathah, atau ya’ sukun ( ي ) sesudah kasrah ( ―ِ ), atau wau ( و ) sesudah dhammah ( ―ُ ).\n
Pada dasarnya mad itu dibagi menjadi 2 , yaitu mad asli dan mad far‘i.\n
Mad Asli adalah mad yang panjangnya 1 alif karena tidak bertemu hamzah, sukun atau tasydid.\n
Mad Far’i adalah mad yang panjangnya lebih dari 1 alif, karena bertemu hamzah, sukun atau tasydid. </string>
    <string name="mad_tobi_harfi">\n
Adalah Mad yang panjangnya satu alif atau dua harokat.\n
Dalam hal ini akan kita temukan pada pembukaan surat-surat ( fawatihussuar ).\n
Hurufnya terkumpul dalam kalimat : حيٌ طَهُرَ.</string>
    <string name="mad_asli">\n
Apabila ada alif ( ا ) terletak sesudah fathah, atau ya’ sukun ( ي ) sesudah kasrah ( ―ِ ), atau wau ( و ) sesudah dhammah ( ―ُ ), maka dihukumi mad thobi’i . Mad artinya panjang , thobi’i artinya biasa.\n
Cara membacanya harus sepanjang dua harakat atau disebut satu alif.</string>
    <string name="mad_a">\n
Apabila ada mad thobi’i bertemu dengan hamzah ( ء ) didalam satu kalimat atau kata.\n
Cara membacanya wajib panjang sepanjang 5 harakat atau dua setengah kali mad thobi’i ( dua setengah alif ).</string>
    <string name="mad_b">\n
Apabila Mad Thobi’i bertemu dengan Huruf Hamzah(ء)/hamzah berupa huruf alif di lain kalimat.\n
Jika Mad Thobi’i-nya terletak pada akhir sebuah kata, kemudian hamzah-nya terletak di awal kata berikutnya,  dibaca panjangnya boleh 4 atau 5 harakat ketika bersambung (washal), 2 harakat ketika waqaf (berhenti).</string>
    <string name="mad_c">\n
Terjadi dari Mad Thobi’i yang diikuti oleh huruf bertasydid, dimana keduanya masih berada pada satu kata.\n
Bila tanda tasydid berada di lain kata, maka tidak terjadi mad.\n
Cara membacanya harus panjang selama 3 kali Mad Thobi’i atau 6 harakat.</string>
    <string name="mad_d">\n
Mad yang terjadi dari pertemuan antara Mad Badal dengan huruf  bertanda sukun (mati). Durasi membacanya adalah 6 harokat.\n
Disebut Mad Lazim karena mesti dibaca panjang.\n
Dinamakan Kalimi karena mad itu terjadi dalam satu kata.\n
Dinamakan Mukhoffaf, karena ringan mengucapkannya, dengan tidak adanya tasydid.\n
Kasus mad ini hanya terjadi di 2 tempat dalam Al-quran, yaitu pada surat Yunus(10) ayat 51 dan 91.</string>
    <string name="mad_e">\n
Mad layyin(mad lin) secara bahasa artinya lunak atau juga bisa disebut miring. /n
Hukum bacaan mad layyin terjadi ketika huruf berharakat fathah atau dhammah bertemu huruf ya (ي) atau wau (و) sedangkan setelahnya ada huruf yang dimatikan karena waqaf (berhenti). Jadi apabila setelahnya lebih dari satu huruf tidah bisa dikatakan mad layyin.\n
Mad layyin juga dapat berfungsi ketika waqof yang telah ditentukan sperti akhir ayat ataupun tanda waqof lainnya. Atau juga bisa berfungsi ketika kita memutuskan bacaan ditengah-tengah ayat karena beberapa faktor seperti kehabisan nafas dan lain sebagainya.\n
Cara membacanya adalah dengan membaca huruf yang berharakat fathah atau dhommah terlebih dahulu, langsung disambung dengan wau sukun atau ya’ sukun dan kemudian diakhiri dengan huruf sesudahnya yang di matikan karena waqof. Panjang bacaan mad layyin bisa di panjangkan 2, atau 4 atau 6 harakat.</string>
    <string name="mad_f">\n
Mad (panjang bacaan), arid (bertemu) dan lissukun (dimatikan karena waqof). Sedangkan secara istilah, mad arid lissukun adalah cara memanjangkan bacaan pada saat berhenti (waqof) baik di akhir maupun di tengah ayat.\n
Berlaku apabila ada waqaf atau tempat pemberhentian membaca, sedang sebelum waqaf itu ada Mad Thobi’i atau Mad Lein, maka cara membacanya ada 3 macam :\n
a. Yang lebih utama dibaca panjang seperti mad wajib muttashil ( 6 harakat ).\n
b. Yang pertengahan dibaca empat harakat yakni dua kali mad thobi’i.\n
c. Yang pendek yakni boleh hanya dibaca seperti mad thobi’i biasa .</string>
    <string name="mad_g">\n
Juga bisa disebut Mad Silah Sugro. Apabila ada haa dhamir ( ﻪ ) berada diantara dua huruf yang berharokat (bukan huruf mati) dan (ﻪ/ﻩ) tersebut huruf yang berharakat dan tidak disambungkan dengan huruf berikutnya, dan tidak bertemu dengan hamzah( ء ) yang berharakat.\n
Cara membacanya adalah dipanjangkan sampai 2 harokat(dua ketukan).</string>
    <string name="mad_h">\n
Apabila ada haa dhamir ( ﻪ ) bertemu huruf hamzah( ء ) yang berharokat dan huruf sebelum haa dhamir ( ﻪ ) tersebut juga berharokat.\n
Cara membacanya adalah dipanjangkan 4 harokat(4 ketukan) atau 5 harokat(5 Ketukan).</string>
    <string name="mad_i">\n
Apabila ada fathatain yang jatuh pada waqaf(pemberhentian) pada akhir kalimat, maka cara membacanya seperti mad thobi’i atau sepanjang 2 harokat.</string>
    <string name="mad_j">\n
Apabila ada hamzah( ء ) bertemu dengan Mad , maka cara bacanya seperti Mad Thobi’i atau sepanjang 2 harokat.\n
Badal artinya ganti. Karena yang sebenarnya huruf mad yang ada tadi asalnya hamzah yang jatuh sukun kemudian diganti menjadi ya atau alif atau wau.</string>
    <string name="mad_k">\n
Apabila ada huruf mad bertemu tasydid dalam huruf. Panjang bacaannya 3 alif (6 harokat).\n
untuk lebih jelasnya silahkan lihat contoh.</string>
	<string name="washol">\n
Hamzah Wasal di awal kata adalah huruf tambahan yang hanya dibaca ketika hamzah tersebut berada di permulaan bacaan dan digugurkan bacaannya/ tidak di baca jika disambung dengan kata sebelumnya/ ketika berada ditengah.\n
\n
Hamzah wasal terkadang harus di baca kasrah, dhomah ataupun fathah tergantung pada sebab - sebab berikut ini:
</string>
	<string name="iwad">\n
Nun ’Iwad juga dikenali dengan Nun Wasal atau Nun Wiqaayah. \n
Pada beberapa mushaf telah di beri tanda huruf nun kecil yang di sebut dengan Nun Qutni, \n
\n
Terjadi jika baris Tanwin (baris dua) bertemu dengan Alif Lam ( ال ) atau Hamzah Wasal ( ا ), \n
\n
Cara membacanya : \n
huruf yang bertanwin itu akan dibaca satu baris saja dan dan di depannya akan di tambahkan huruf Nun berbaris kasrah (walaupun ia tidak ada pada tulisan).\n
Contoh : </string>
	<string name="isymam">\n
Hanya ada satu ayat yang terdapat bacaan Isymam dalam Al-Quran, yaitu pada Qs: Yusuf ayat: 11\n
Isymam di baca dengan mengisaratkan bibir seolah-olah sedang mengeluarkan kata "nu" namun tanpa suara, ketika mentasydidkan nun yang berwarna merah pada ayat berikut ini: </string>
	<string name="imalah">\n
Imalah adalah mencondongkan bunyi bacaan baris fathah lebih hampir kepada bunyi baris kasrah. Hanya ada satu tempat bacaan imalah: Surah Huud: 41 \n
\n
perhatikan yang berwarna merah 
</string>
</resources>