<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">
	<ScrollView 
	    android:layout_width="fill_parent"
		android:layout_height="fill_parent">
<LinearLayout 
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/idgham"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:gravity="center" />
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Idgham Bighunnah :"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:gravity="left" />
	<TextView
        android:padding="5.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_bigunnah"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:gravity="left" />
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Contoh :"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:gravity="left" />
	<ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/id_bigunnah"
        android:id="@+id/img"
        android:layout_gravity="center"
        android:gravity="left" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="50.0dip"
        android:text="Contoh Suara"
        android:id="@+id/id_bigunnah"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal" />

	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Idgham Bilaghunnah :"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:gravity="left" />
	<TextView
        android:padding="5.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_bilagunnah"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:gravity="left" />
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Contoh :"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:gravity="left" />
	<ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/id_bilagunnah"
        android:id="@+id/img"
        android:layout_gravity="center"
        android:gravity="left" />
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="50.0dip"
        android:text="Contoh Suara"
        android:id="@+id/id_bilagunnah"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal" />
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Pengecualian :"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:gravity="left" />
	<TextView
        android:padding="5.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/satukata"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:gravity="left" />
	<ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/satukata"
        android:id="@+id/img"
        android:layout_gravity="center"
        android:gravity="left" />
	<Button
        android:layout_width="wrap_content"
        android:layout_height="50.0dip"
        android:text="Contoh Suara"
        android:id="@+id/satukata"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal" />
	

	<TextView
        android:padding="5.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/satukata_"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:gravity="left" />
	<ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/satukata_"
        android:id="@+id/img"
        android:layout_gravity="center"
        android:gravity="left" />
	<Button
        android:layout_width="wrap_content"
        android:layout_height="50.0dip"
        android:text="Contoh Suara"
        android:id="@+id/satukata_"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal" />
</LinearLayout>
	</ScrollView>
</LinearLayout>
